SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")

add_executable(7_1 calling.cpp)
add_executable(7_2 protos.cpp)
add_executable(7_3 twoarg.cpp)
add_executable(7_4 lotto.cpp)
add_executable(7_5 arrfun1.cpp)
add_executable(7_6 arrfun2.cpp)
add_executable(7_7 arrfun3.cpp)
add_executable(7_8 arrfun4.cpp)
add_executable(7_9 strgfun.cpp)
add_executable(7_10 strgback.cpp)
add_executable(7_11 travel.cpp)
add_executable(7_12 strctfun.cpp)
add_executable(7_13 strctptr.cpp)
add_executable(7_14 topfive.cpp)
add_executable(7_15 arrobj.cpp)
add_executable(7_16 recur.cpp)
add_executable(7_17 ruler.cpp)
add_executable(7_18 fun_ptr.cpp)
add_executable(7_19 arfupt.cpp)
